--- a/Mod 4/mod_4_final_project/Mod 4 Project Kick-Off.ipynb
+++ b/Mod 4/mod_4_final_project/Mod 4 Project Kick-Off.ipynb
@@ -344,6 +344,7 @@
     "        - If you want to work in health care:\n",
     "            - Computer Vision with preapproved dataset\n",
     "            - NLP\n",
+    "            - Time Series (not with financial)\n",
     "\n",
     "    - **If you have no idea what type of job:**\n",
     "        - check job listings for data scientist and data analyst positions in your area to see what is in demand.\n",
@@ -534,7 +535,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "256px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
