--- a/Mod 4/mod_4_final_project/time-series/starter_notebook.ipynb
+++ b/Mod 4/mod_4_final_project/time-series/starter_notebook.ipynb
@@ -179,7 +179,7 @@
     "    melted = pd.melt(df, id_vars=['RegionName', 'City', 'State', 'Metro', 'CountyName'], var_name='time')\n",
     "    melted['time'] = pd.to_datetime(melted['time'], infer_datetime_format=True)\n",
     "    melted = melted.dropna(subset=['value'])\n",
-    "    return melted#melted.groupby('time').aggregate({'value':'mean'})"
+    "    return melted#.groupby('time').aggregate({'value':'mean'})"
    ]
   },
   {
