--- a/Mod 5/Capstone_Kickoff_041320pt.ipynb
+++ b/Mod 5/Capstone_Kickoff_041320pt.ipynb
@@ -111,18 +111,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# CAPSTONE README"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Topic:\n",
     ">- Your project should develop a data product or analysis related to a single topic.\n",
@@ -141,9 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Technical Requirements\n",
     "\n",
@@ -203,8 +197,7 @@
     "ExecuteTime": {
      "end_time": "2020-02-18T16:58:35.959856Z",
      "start_time": "2020-02-18T16:58:35.948545Z"
-    },
-    "hidden": true
+    }
    },
    "source": [
     "\n",
@@ -225,18 +218,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# EXAMPLES"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### From Capstone README:\n",
     "Take a look at this [technical report](https://github.com/paulinaczheng/twitter_flu_tracking) from a Flatiron student that used tweet data to predict the weekly number of flu cases during flu season. Pay attention to how well structured the project is, and how much she relies on great visualizations to tell her story for her. Your explanations don't have to be wordy - a visualization is worth a thousand words!"
@@ -244,18 +233,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Example Capstones"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- https://github.com/slieb74/NBA-Shot-Analysis\n",
     "- https://github.com/NaokoSuga/gentrification_yelp\n",
@@ -274,18 +259,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### My Cohort (online-ds-ft-021119)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- https://github.com/whitcrrd/puzzle-image-segmentation\n",
     "- https://github.com/kpokrass/Global_Warming\n",
@@ -295,18 +276,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Example Dashboards"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "#### Hosted Online:\n",
     "- https://still-plateau-25734.herokuapp.com/ (Dash)\n",
@@ -321,18 +298,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "## Resources"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "- **Note from James:**\n",
     "    - I have a template project repo with a template README and the OSEMN framework notebook.\n",
@@ -343,9 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -379,7 +350,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
