--- a/Mod 4/sect_43-AWS/sect_43_operationalizing_code_AWS_v2.ipynb
+++ b/Mod 4/sect_43-AWS/sect_43_operationalizing_code_AWS_v2.ipynb
@@ -26,8 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questions\n",
-    "- [Q Doc](https://docs.google.com/document/d/1oJLFYAGc-tCDrKtlDVSxfWK4fBNCMgL69hY3-ej6QXk/edit?usp=sharing)"
+    "## Questions\n"
    ]
   },
   {
@@ -451,14 +450,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# HOW TO: Productionizing Models with SageMaker"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- **SAVE THESE 4 RESOURCES:**\n",
     "    - [Canvas Lesson: AWS Ecosystem](https://github.com/learn-co-curriculum/dsc-the-aws-ecosystem) (has account/IAM setup)\n",
@@ -469,14 +472,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Overview of Process"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "When productionizing a machine learning model using AWS, you'll typically use the following workflow:\n",
     "\n",
@@ -488,14 +495,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Steps for Deploying A Model (from lesson)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> #### 0. Complete AWS training notebooks [REQUIRED]\n",
     "- https://github.com/aws-samples/amazon-sagemaker-keras-text-classification\n",
@@ -508,7 +519,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 1. Build and Register the container"
@@ -599,7 +611,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 2. Setting up the environment"
@@ -635,7 +648,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 3. Creating the Session"
@@ -659,7 +673,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 4. Upload the Data for Training"
@@ -684,7 +699,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 5. Fitting the Model\n"
@@ -731,7 +747,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 6. Deploying the Model"
@@ -757,7 +774,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 7. Cleanup (IMPORTANT!!)"
@@ -780,7 +798,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 8. Deactivate Everything in AWS"
