Update Capstone Office Hours.ipynb

--- a/Mod 5/Capstone Office Hours.ipynb
+++ b/Mod 5/Capstone Office Hours.ipynb
@@ -2,37 +2,112 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# CAPSTONE OFFICE HOURS"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- online-ds-pt-041320\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- [Questions Doc](https://docs.google.com/document/d/196yIMNSRSRspBdBmjHq7vMhFF-YdpvkyYEHYV5nm8xg/edit?usp=sharing)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## 12/17/20"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Graudation Requirements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 01/06/21  Office Hours + Dashboarding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> #### Welcome back!!!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reminder - Capstone Deadlines"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Deadline/Period| Project Component | Date|\n",
+    "| --- |---|---|\n",
+    "|  Week 4 |  Modeling  | 01/04 - 01/09|\n",
+    " Week 5 | Final Modeling Tweaks & Presentation/Dashboard Prep| 01/11 - 01/16  |\n",
+    " Week 6 (Final) |Presentation & Dashboarding |01/18 - 01/23 |\n",
+    "| **SOFT DEADLINE**| **Turn in your links and schedule Your Review**<br>https://go.oncehub.com/041320PTProjectReviews| **01/23/21**|\n",
+    "| PROJECT REVIEWS | PRESENTATION WEEK ONE  |01/24 - 01/29|\n",
+    "|PROJECT REVIEWS | PRESENTATION WEEK TWO |01/30 - 02/05|\n",
+    "|**HARD DEADLINE**| **Successfully Pass Project Review**|**02/05/21**|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dashboarding Notebook/Repo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Today's study group material is in another repository.\n",
+    "- https://github.com/jirvingphd/dashboarding-studygroup-041320pt"
    ]
   },
   {
