Updated notebook for class

--- a/Making Python Packages & Modules/creating-your-own-pypi-package-with-cookiecutter.ipynb
+++ b/Making Python Packages & Modules/creating-your-own-pypi-package-with-cookiecutter.ipynb
@@ -46,14 +46,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# \"But...*why would I bother?*\", you may be wondering..."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## **Lots of reasons!** (*mostly convenience*),<br>But also...\n",
     "1. Because you're *sick* of having to copy and paste your favorite functions into every new notebook or to sync them across computers..\n",
@@ -77,21 +81,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# \"OK, I'm on board,\" you're (hopefully) thinking... \"So, *how?*\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### *How I created BroadSteel_DataScience (bs_ds)*‡"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> <img src=\"https://raw.githubusercontent.com/jirvingphd/dsc-3-final-project-online-ds-ft-021119/master/blog_post/bs_ds_logo.png\" width =\"200\">\n",
     "\n",
@@ -103,14 +113,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## THE TOOLS I USE:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     ">* Please note: there are simpler ways to go about creating your first Python module, but I am going to show you the exact tools and instructions I used to allow me to have a totally automated workflow and package deployment.\n",
     "\n",
@@ -127,14 +141,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 3. HOW TO CREATE A PROFESSIONAL INFRASTRUCTURE USING COOKIECUTTER"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "> <img src=\"https://raw.githubusercontent.com/jirvingphd/dsc-3-final-project-online-ds-ft-021119/master/blog_post/cookiecutter_medium.png\" width=\"200\"><br>\n",
     "\n",
@@ -147,21 +165,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## MY RECOMMENDED STEPS FOR CUTTING YOUR FIRST COOKIES:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### STEP 0: BEFORE GETTING STARTED,  CREATE ACCOUNTS FOR REQUIRED/DESIRED SERVICES:"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     " 1. [ ]  **Go to PyPi.org and \"Register\" a new account. [REQUIRED]** \n",
     "     - PyPi.org is the offical service that hosts pip-installable packages. \n",
@@ -189,28 +213,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### STEP 1. Clone your conda environment and install cookiecutter"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- [ ] **Create a new virtual environment**, preferably by cloning your current one."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### To Clone Your Environment Via the Terminal"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "\n",
     "```bash\n",
@@ -224,14 +256,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### To Clone Your Environment via  a GUI"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- Anaconda Navigator makes the cloning process easy. \n",
     "    - In Navigator, click on the ```Environments``` tab in the sidebar. \n",
@@ -241,7 +277,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Note: you may need to run the follow command for this env to appear in Jupyter\n",
     "\n",
@@ -252,7 +290,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### **Official Step 1: Install cookiecutter into your new environment.**\n",
     "- Tutorial \"Step 1: Install Cookiecutter\": Install Cookie Cutter and cookie-cut the default template cookiecuter repo.\n",
@@ -264,14 +304,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### **OFFICIAL STEP #2.  Generate your package infrastructure using cookiecutter command**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "* [ ] Activate cloned environment from step #1, `cd`into your  repo's folder.\n",
     "\n",
@@ -287,7 +331,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### Cookiecutter Prompts and recommended answers:\n",
     "\n",
@@ -296,7 +342,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### The cookiecutter options I selected for bs_ds were as follows:\n",
     "- **\"project_slug\"** \n",
@@ -332,7 +380,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### **STEP 2: Create a new GitHub repo for your package**\n",
     "\n",
@@ -366,7 +416,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### **Official Step 4: Install Dev Requirements**\n",
     "- In your terminal, make sure you are still located in the main repo folder, which contains **requirements-dev.txt**\n",
@@ -382,7 +434,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## We will be skipping Steps 5,6, and 7 today\n",
     "\n",
@@ -393,7 +447,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### ~~**Official Step 5: Set Up Travis CI**~~\n",
     "\n",
@@ -417,7 +473,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### ~~**Official Step 6: Set Up ReadTheDocs**~~\n",
     "- [ ] Follow the [official tutorial step 6](https://cookiecutter-pypackage.readthedocs.io/en/latest/tutorial.html#step-6-set-up-readthedocs) for setting up documentation on readthedocs.org."
@@ -425,7 +483,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### ~~Official Step 7:Set Up pyup.io~~\n",
     "- **Short Version: This is an added level of complexity that I chose to skip for myself and recommend you do the same for now.**\n",
@@ -443,14 +503,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## **Official Step 8: Release on PyPi**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### ~~One last annoying, first-time-only hurdle and then you're on your way to automated deployment for the future!~~\n",
     "\n",
@@ -492,7 +556,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- TROUBLESHOOTING NOTE: \n",
     "    - For me, using ```python3``` for the above commnads did not work. I simply had to change ```python3``` to just  ```python```<br>\n",
@@ -508,14 +574,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Adding Your Code / Editing your package/modules"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- When working on your package/modules, I highly recommend using **Microsoft Visual Studio Code.**\n",
     "    - Visual Studio was likely installed with Anaconda, but if it wasn't. Open Anaconda Navigator, and look for Visual Studio code on the Home tab, in the same section as Jupyter Lab and Jupyter Notebooks.\n",
@@ -527,7 +597,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### The files we will discuss below:\n",
     "-  **Module/submodule files (where your put your code)**\n",
@@ -628,10 +700,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Updating and Deploying Your Package\n",
-    "\n",
+    "# Updating and Deploying Your Package"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "## To deploy an updated version of your package:\n",
     "\n",
     "1. [ ] Debug your modules locally to save time.\n",
@@ -713,9 +794,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "# Congratulations! You did it!\n",
+    "# Congratulations! You did it!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
     "<img src=https://raw.githubusercontent.com/jirvingphd/dsc-3-final-project-online-ds-ft-021119/master/blog_post/celebrate-311709_1280.png width=\"400\">\n",
     "\n",
     "- While the process certainly is not _easy_ to set up, once everything has been configured you will be able to easily and automatically deploy all updates to your package/modules.\n",
@@ -727,21 +818,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# APPENDIX"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "## Backup Env Instead of Cloning it"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- [ ] **Backup and export your current enviornment** to a .yml file, which you can use to re-install your env, if need be. \n",
     "    - For Anaconda environments, open your terminal and activate your environment before exporting: <br><br>```source activate env-name```<br> ```conda env export > my_environment.yml``` <br><br>\n",
@@ -756,7 +853,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
@@ -795,7 +894,7 @@
     "width": "320px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
