--- a/Mod 4/sect_40_neural_networks/Sect_40_Intro_to_Neural_Networks_v3_SG.ipynb
+++ b/Mod 4/sect_40_neural_networks/Sect_40_Intro_to_Neural_Networks_v3_SG.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"https://raw.githubusercontent.com/jirvingphd/my-best-lessons-and-code-jmi/main/Images/Brainbow-Hippocampus-rainbow-colors-large.jpg\" width=60%>\n",
+    "<img src=\"https://raw.githubusercontent.com/flatiron-school/Online-DS-FT-022221-Cohort-Notes/master/Phase_4/topic_40-41_neural_networks/images/Brainbow-Hippocampus-rainbow-colors-large.jpg\" width=60%>\n",
     "\n",
     "\n",
     "\n",
@@ -1426,9 +1426,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "learn-env",
+   "display_name": "learn-env-new",
    "language": "python",
-   "name": "learn-env"
+   "name": "learn-env-new"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1440,7 +1440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
